# rewind

./: .gitignore  HOTKEY_SETUP.md  LICENSE  README.md  create_app.sh  install.sh  launch_openrecall.py  launch_openrelife.py  pyproject.toml  setup.py  start_openrecall.sh  start_openrelife.sh  test_electron.sh
.github/: FUNDING.yml
docs/: encryption.md  hardware.md
electron-app/: .gitignore  CHANGELOG.md  README.md  create-tray-icon.js  loading.html  main.js  package.json  preload.js  start.sh
openrecall/: ai_ocr.py  app.py  database.py  ocr.py  screenshot.py
openrelife/: ai_ocr.py  app.py  config.py  database.py  nlp.py  screenshot.py  utils.py
tests/: test_config.py  test_database.py  test_nlp.py
